UI: adjust the z-index for popover elements to avoid scrolling above the metabar. (#32769)
https://mantis.ilias.de/view.php?id=32769

This mantis ticket is solved partly. After consideration it was decided
to exchange the current webui-popover jquery library with another library in the
future, because it's not maintained anymore and hasn't been for a few
years. For this task an entry was written in the UI ROADMAP.

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -7105,7 +7105,7 @@ div.alert ul > li:before {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 997;
   display: none;
   min-width: 50px;
   min-height: 32px;
@@ -7371,7 +7371,7 @@ div.alert ul > li:before {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9998;
+  z-index: 996;
 }
 
 .webui-popover .dropdown-menu {
